--- a/style.css
+++ b/style.css
@@ -334,10 +334,56 @@
     margin: 2rem;
     justify-content: center;
     gap: 2rem;
+    border: solid red 2px;
+    margin: 4rem;
+    padding: 0;
+    transform: skew(-20deg);
 }
 .column {
     display: flex;
     flex-direction: column;
     
 }
-
+.blogcontent {
+    display: flex;
+    margin: 5rem;
+    justify-content: center;
+}
+.contentBoxone{
+    display: flex;
+    flex-direction: column;
+    border: solid grey 2px;
+    border-radius: 5%;
+    padding: 2rem;
+}
+.contentBoxtop {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 1rem;
+}
+.contentBoxleft img {
+    max-height: auto;
+    max-width: 5rem;
+    border-radius: 50%;
+    border: solid black 2px;
+}
+.contentBoxBottom {
+    display: grid;
+    grid-template-areas: 
+    "one two three four five six seven eight nine ten eleven twelve thirteen fourteen fifteen";
+    margin-top: 2rem;
+}
+.contentBoxcolumns {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+}
+.contentBoxcolumns img {
+    height: auto;
+    width: 20px;
+}
+.heart {
+    color: green;
+}
