Created merch page with a chekc back soon title and started on the portfolio page

--- a/style.css
+++ b/style.css
@@ -384,3 +384,9 @@
     height: auto;
     width: 20px;
 }
+.merchText {
+    margin: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
