--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding-top: 64px;
     display: flex;
     justify-content: space-between;
-    background-color: hsla(134, 54%, 89%, 0.793);
+    background-color: #857ebbc9;
 }
 .header h1 {
     margin-left: 1rem;
@@ -32,7 +32,7 @@
     padding-top: 4px;
     padding-bottom: 4px;
     border-radius: 6px;
-    background-color: white;
+    background-color: #7fcbd7;
     margin-right: 1rem;
 }
 .mainBody {
@@ -50,12 +50,13 @@
 .topSection h1 {
     font: weight 600;
     text-decoration: underline;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 .topSection img {
     height: auto;
     width: 60%;
     border-radius: 1rem;
+    margin-top: 8px;
 }
 .topSection p {
     margin:4px;
@@ -64,11 +65,18 @@
     margin: 20px;
     color: black;    
 }
+.middleSections{
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    padding-bottom: 2rem;
+    border-bottom: solid 4px black;
+}
 .sectionPieces {
-    margin: 2rem;
     display: flex;
     align-items: center;
-    justify-content: space-around;}
+    justify-content: space-around;
+    background-color: #facbd3;
+}
 .leftSection{
     display: flex;
     flex-direction: column;
@@ -82,6 +90,9 @@
 }
 .leftSection form {
     text-align: center;   
+}
+.leftSection form button {
+     background-color: #7fcbd7;
 }
 .leftSection img {
     height: auto;
