--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgba(128, 128, 128, 0.588);
+    background-color: #facbd3;
     padding: 1rem;
     border-radius: 3rem;
 
@@ -345,7 +345,7 @@
     margin: 2rem;
     justify-content: center;
     gap: 2rem;
-    border: solid red 2px;
+    /* border: solid red 2px; */
     margin: 4rem;
     padding: 0;
     transform: skew(-20deg);
